# Roblox-Runnerer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
src/: macros.rs  main.rs  patch.rs  structs.rs
src/find/: mod.rs  util.rs
src/find/init_main/: mod.rs  scrt_init.rs  win_main.rs
src/offsets/: mod.rs  util.rs
src/offsets/datamodel/: mod.rs
src/offsets/init_main/: mod.rs  scrt_init.rs  win_main.rs
src/prep/: dll.rs  libs.rs  mod.rs  patch.rs  qt.rs
src/slop/: Cargo.toml  EXTERNAL_METHODS.md  README.md  app.rs  build.rs  document.rs  forwarder.rs  function_marshaller.rs  game_verbs.rs  mod.rs  render_job.rs  resource.rs  user_input.rs  view.rs
src/slop/rbx/: analytics.rs  http.rs  mod.rs
src/slop/src/: app.rs  document.rs  function_marshaller.rs  game_verbs.rs  main.rs  rbx_web_view.rs  render_job.rs  teleporter.rs  user_input.rs  view.rs  web_browser_ax_dialog.rs
src/slop/src/rbx/: mod.rs  settings.rs
