set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "C:/Program Files/RobloxStudio548/")
cmake_minimum_required(VERSION 3.20)
project(6767)
add_executable(6767 main.cpp)
target_link_libraries(6767
	"C:/Windows/System32/IPHLPAPI.DLL"
	"C:/Windows/System32/KernelBase.dll"
	"C:/Windows/System32/RTWorkQ.dll"
	"C:/Windows/System32/SHCore.dll"
	"C:/Windows/System32/advapi32.dll"
	"C:/Windows/System32/bcrypt.dll"
	"C:/Windows/System32/bcryptprimitives.dll"
	"C:/Windows/System32/cfgmgr32.dll"
	"C:/Windows/System32/combase.dll"
	"C:/Windows/System32/crypt32.dll"
	"C:/Windows/System32/cryptbase.dll"
	"C:/Windows/System32/d3d9.dll"
	"C:/Windows/System32/dbgcore.dll"
	"C:/Windows/System32/dbghelp.dll"
	"C:/Windows/System32/dnsapi.dll"
	"C:/Windows/System32/dwmapi.dll"
	"C:/Windows/System32/gdi32.dll"
	"C:/Windows/System32/gdi32full.dll"
	"C:/Windows/System32/glu32.dll"
	"C:/Windows/System32/imm32.dll"
	"C:/Windows/System32/kernel.appcore.dll"
	"C:/Windows/System32/kernel32.dll"
	"C:/Windows/System32/mfplat.dll"
	"C:/Windows/System32/mpr.dll"
	"C:/Windows/System32/msacm32.dll"
	"C:/Windows/System32/msdmo.dll"
	"C:/Windows/System32/msvcp_win.dll"
	"C:/Windows/System32/msvcrt.dll"
	"C:/Windows/System32/netapi32.dll"
	"C:/Windows/System32/netutils.dll"
	"C:/Windows/System32/nsi.dll"
	"C:/Windows/System32/ntdll.dll"
	"C:/Windows/System32/ole32.dll"
	"C:/Windows/System32/oleaut32.dll"
	"C:/Windows/System32/opengl32.dll"
	"C:/Windows/System32/powrprof.dll"
	"C:/Windows/System32/rpcrt4.dll"
	"C:/Windows/System32/sechost.dll"
	"C:/Windows/System32/secur32.dll"
	"C:/Windows/System32/setupapi.dll"
	"C:/Windows/System32/shell32.dll"
	"C:/Windows/System32/shlwapi.dll"
	"C:/Windows/System32/srvcli.dll"
	"C:/Windows/System32/sspicli.dll"
	"C:/Windows/System32/ucrtbase.dll"
	"C:/Windows/System32/umpdc.dll"
	"C:/Windows/System32/user32.dll"
	"C:/Windows/System32/userenv.dll"
	"C:/Windows/System32/uxtheme.dll"
	"C:/Windows/System32/version.dll"
	"C:/Windows/System32/win32u.dll"
	"C:/Windows/System32/windows.storage.dll"
	"C:/Windows/System32/wininet.dll"
	"C:/Windows/System32/winmm.dll"
	"C:/Windows/System32/winmmbase.dll"
	"C:/Windows/System32/wldp.dll"
	"C:/Windows/System32/ws2_32.dll"
)
