[package]
name = "roblox-runnerer"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.58"
features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_System_Environment",
]

[dependencies.iced-x86]
# ICE be like...
version = "1.21.0"
features = ["code_asm"]
