[package]
name = "roblox-runnerer"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"

[dependencies.windows]
version = "0.58"
features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_System_Environment",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Ole",
	"Win32_System_Memory",
	"Win32_System_Registry",
	"Win32_System_Power",
	"Win32_System_SystemInformation",
	"Win32_System_DataExchange",
	"Win32_System_Diagnostics_Debug",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_HiDpi",
	"Win32_UI_Controls",
	"Win32_UI_Shell",
	"Win32_Graphics_Gdi",
	"Win32_Devices_HumanInterfaceDevice",
	"Win32_Storage_FileSystem",
	"Win32_Globalization",
]

[dependencies.windows-core]
# Win32 / COM / ATL-equivalent surface. The MFC/ATL classes in the original
# (CWinApp, CWindowImpl, CAxDialogImpl, CComPtr, _bstr_t, ...) are expressed
# here with the `windows` crate's COM + windowing APIs.
version = "0.58"


[dependencies.iced-x86]
# ICE be like...
version = "1.21.0"
features = ["code_asm"]

[dependencies.cstring-array]
version = "0.1.1"
