[package]
name = "windows_client"
version = "0.1.0"
edition = "2021"
description = "Idiomatic Rust port of the ROBLOX (2016) WindowsClient, with anti-cheat / VMProtect / Authenticode-verification code removed."
build = "build.rs"

[[bin]]
name = "RobloxPlayerBeta"
path = "src/main.rs"

[dependencies]
# Win32 / COM / ATL-equivalent surface. The MFC/ATL classes in the original
# (CWinApp, CWindowImpl, CAxDialogImpl, CComPtr, _bstr_t, ...) are expressed
# here with the `windows` crate's COM + windowing APIs.
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem",
    "Win32_Globalization",
]

[build-dependencies]
# Compiles WindowsClient.rc (icons, dialogs, accelerators, string table).
embed-resource = "2"
